Change package.json name
- Change name from `ga-wdi-boston.api-token-auth` to
`ga-wdi-boston.jquery-ajax-token-auth`
- close #33

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ga-wdi-boston.api-token-auth",
+  "name": "ga-wdi-boston.jquery-ajax-token-auth",
   "version": "0.0.4",
   "private": true,
   "license": {
